<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sortPopup_name_asc"
        android:title="이름 오름차순" />
    <item
        android:id="@+id/sortPopup_name_desc"
        android:title="이름 내림차순" />

</menu>