<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CocktailInfoFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolFragmentBarLayout"
        />


    <Button
        android:id="@+id/cock_ingrdButton"
        android:layout_width="170dp"
        android:layout_height="155dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_drinks"
        android:drawablePadding="-5dp"
        android:elevation="15dp"
        android:fontFamily="@font/nanumbarunpenb"
        android:paddingTop="15sp"
        android:shape="rectangle"
        android:text="칵테일 재료"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cock_equipButton"
        app:layout_constraintEnd_toStartOf="@+id/cock_listButton"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cock_listButton"
        android:layout_width="170dp"
        android:layout_height="155dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_cocktail_list_image"
        android:drawablePadding="-5dp"
        android:elevation="15dp"
        android:fontFamily="@font/nanumbarunpenb"
        android:paddingTop="15sp"
        android:shape="rectangle"
        android:text="칵테일 리스트"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cock_senseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cock_ingrdButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cock_equipButton"
        android:layout_width="170dp"
        android:layout_height="155dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_cocktail_equipment_real"
        android:drawablePadding="-5dp"
        android:elevation="15dp"
        android:fontFamily="@font/nanumbarunpenb"
        android:paddingTop="15sp"
        android:shape="rectangle"
        android:text="칵테일 장비"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cock_senseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cock_ingrdButton" />

    <Button
        android:id="@+id/cock_senseButton"
        android:layout_width="170dp"
        android:layout_height="155dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_cocktail_base_image"
        android:drawablePadding="-5dp"
        android:elevation="15dp"
        android:fontFamily="@font/nanumbarunpenb"
        android:paddingTop="15sp"
        android:shape="rectangle"
        android:text="칵테일 기본상식"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cock_equipButton"
        app:layout_constraintTop_toBottomOf="@+id/cock_listButton" />



</androidx.constraintlayout.widget.ConstraintLayout>