<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/list_button_search"
        android:contentDescription="Search recipes"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="Search"
        android:visible="true"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/sortMenu_proof_desc"
        android:title="도수 높은 순" />
    <item
        android:id="@+id/sortMenu_proof_asc"
        android:title="도수 낮은 순" />
    <item
        android:id="@+id/sortMenu_name_asc"
        android:title="이름 내림차순" />
    <item
        android:id="@+id/sortMenu_name_desc"
        android:title="이름 오름차순" />
</menu>